@@ -1,3 +1,5 @@
+HEAD
+    + Added new router types with dhcp and pppoe
 0.7
     + Added user-extensions and single-window settings for Selenium
     + Now -wait-fail option gives the opportunity of retry a test
